syntax = "proto3";

package version;

enum VersionProto {
  INITIAL_RELEASE = 0;
}
