syntax = "proto3";

package wrapped;

import "version.proto";

message SecretProto {
	version.VersionProto version = 1;
	bytes secret = 2;
	string mime_type = 3;
}
